--- a/app/src/main/res/layout/activity_detalle_causa_analisis_falla.xml
+++ b/app/src/main/res/layout/activity_detalle_causa_analisis_falla.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:statusBarColor="@color/cardview_dark_background"
     tools:context="com.movil.summmit.motorresapp.DetalleCausaAnalisisFallaActivity">
 
 
@@ -67,11 +68,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
 
-       <!-- <TextView
-            android:textAlignment="center"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Tecnicos:"/>-->
+        <!-- <TextView
+             android:textAlignment="center"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:text="Tecnicos:"/>-->
         <android.support.design.widget.TextInputLayout
             android:id="@+id/tmpTecnicos"
             android:layout_width="match_parent"
@@ -80,13 +81,19 @@
                 android:inputType="none"
                 android:textSize="10sp"
                 android:id="@+id/edtTecnicos"
-                android:hint="seleccione tecnicos"
+                android:hint="Seleccione tecnicos"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content" />
-        <!--    <Spinner
-                android:id="@+id/spnTecnicos"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"></Spinner>-->
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_height="40dp"/>
+
+            <!--    <Spinner
+                    android:id="@+id/spnTecnicos"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"></Spinner>-->
 
         </android.support.design.widget.TextInputLayout>
 
@@ -117,11 +124,13 @@
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tmpSistemaFalla"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                >
                 <Spinner
                     android:id="@+id/spnSistemaFalla"
                     android:layout_width="130dp"
-                    android:layout_height="wrap_content"></Spinner>
+                    android:layout_height="wrap_content"
+                    ></Spinner>
             </android.support.design.widget.TextInputLayout>
 
 
@@ -145,7 +154,7 @@
                 android:layout_height="wrap_content">
                 <Spinner
                     android:id="@+id/spnModoFalla"
-                    android:layout_width="160dp"
+                    android:layout_width="130dp"
                     android:layout_height="wrap_content"></Spinner>
             </android.support.design.widget.TextInputLayout>
 
@@ -184,9 +193,13 @@
 
         <CheckBox
             android:id="@+id/chkScanner"
-            android:text="Uso Scanner"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Uso Scanner" />
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="1dp"/>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/tmpFileScanner"
@@ -197,7 +210,7 @@
                 android:layout_marginLeft="5dp"
                 android:textSize="10sp"
                 android:hint="Seleccione file.."
-                android:layout_width="180dp"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content" />
 
         </android.support.design.widget.TextInputLayout>
@@ -212,9 +225,14 @@
 
         <CheckBox
             android:id="@+id/chkAceite"
-            android:text="Muestra Aceite"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Muestra Aceite" />
+
+        <View
+            android:layout_width="43dp"
+            android:layout_height="1dp"
+            android:layout_weight="1" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/tmpFileMuestAceite"
@@ -225,7 +243,7 @@
                 android:layout_marginLeft="5dp"
                 android:hint="Seleccione file.."
                 android:textSize="10sp"
-                android:layout_width="200dp"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
 
@@ -240,9 +258,14 @@
 
         <CheckBox
             android:id="@+id/chkCombustible"
-            android:text="Muestra Combustible"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Muestra Combustible" />
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="1dp"/>
+
         <android.support.design.widget.TextInputLayout
             android:id="@+id/tmpFileMuestCombus"
             android:layout_width="wrap_content"
@@ -254,7 +277,7 @@
                 android:layout_marginLeft="5dp"
                 android:hint="Seleccione file.."
                 android:textSize="10sp"
-                android:layout_width="180dp"
+                android:layout_width="170dp"
                 android:layout_height="wrap_content" />
         </android.support.design.widget.TextInputLayout>
 
@@ -274,6 +297,8 @@
                 android:layout_height="wrap_content"
                 android:id="@android:id/tabs" />
 
+
+
             <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:id="@android:id/tabcontent" >
@@ -291,9 +316,14 @@
                         android:layout_height="wrap_content">
                         <Button
                             android:id="@+id/btnDiagnostico"
-                            android:text="Agregar"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" />
+                            android:layout_height="wrap_content"
+                            android:theme="@android:style/Theme.Material.Light.Voice"
+                            android:text="Agregar"/>
+                        <View
+                            android:layout_width="1dp"
+                            android:layout_weight="1"
+                            android:layout_height="1dp"/>
                         <EditText
                             android:id="@+id/edtDiagnostico"
                             android:layout_marginLeft="4dp"
@@ -326,6 +356,10 @@
                             android:text="Agregar"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
+                        <View
+                            android:layout_width="1dp"
+                            android:layout_weight="1"
+                            android:layout_height="1dp"/>
                         <EditText
                             android:id="@+id/edtCausaFalla"
                             android:layout_marginLeft="4dp"
@@ -357,6 +391,10 @@
                             android:text="Agregar"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
+                        <View
+                            android:layout_width="1dp"
+                            android:layout_weight="1"
+                            android:layout_height="1dp"/>
                         <EditText
                             android:id="@+id/edtTrabajocorrec"
                             android:layout_marginLeft="4dp"
