cambios en combos

--- a/app/src/main/res/layout/activity_adjuntos.xml
+++ b/app/src/main/res/layout/activity_adjuntos.xml
@@ -13,12 +13,20 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+        <View
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="10dp"/>
 
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textSize="17dp"
          android:text="Adjuntar VIN"/>
+        <View
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="10dp"/>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/tmpVin"
@@ -42,17 +50,25 @@
         android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-
+        <View
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="10dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textSize="17dp"
             android:text="Adjuntar Km/Horas"/>
+        <View
+            android:layout_width="wrap_content"
+            android:layout_weight="1"
+            android:layout_height="10dp"/>
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/tmpKmHoras"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
+
             <EditText
                 android:id="@+id/edtKmHoras"
                 android:textSize="10sp"
