--- a/app/src/main/res/layout/activity_nuevo_informe.xml
+++ b/app/src/main/res/layout/activity_nuevo_informe.xml
@@ -8,7 +8,18 @@
     android:padding="5dp"
     tools:context="com.movil.summmit.motorresapp.NuevoInformeActivity">
 
+    <ScrollView
+        android:padding="4dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+
+        <LinearLayout
+            android:gravity="center"
+            android:padding="3dp"
+            android:layout_width="wrap_content"
+            android:orientation="vertical"
+            android:layout_height="wrap_content" >
     <LinearLayout
         android:padding="5dp"
         android:layout_width="wrap_content"
@@ -32,7 +43,7 @@
                 android:layout_height="wrap_content">
                 <Spinner
                     android:id="@+id/spnEmpresa"
-                    android:layout_width="180dp"
+                    android:layout_width="151dp"
                     android:layout_height="wrap_content"></Spinner>
             </android.support.design.widget.TextInputLayout>
 
@@ -74,23 +85,25 @@
         android:gravity="center">
 
         <LinearLayout
+            android:layout_width="151dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/border"
             android:gravity="center"
-            android:layout_width="wrap_content"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Area"/>
+                android:text="Area" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tmpArea"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+
                 <Spinner
                     android:id="@+id/spnArea"
-                    android:layout_width="180dp"
+                    android:layout_width="151dp"
                     android:layout_height="wrap_content"></Spinner>
             </android.support.design.widget.TextInputLayout>
 
@@ -125,22 +138,25 @@
         android:gravity="center">
 
         <LinearLayout
+            android:layout_width="154dp"
+            android:layout_height="wrap_content"
             android:background="@drawable/border"
             android:gravity="center"
-            android:layout_width="wrap_content"
-            android:orientation="vertical"
-            android:layout_height="wrap_content">
+            android:orientation="vertical">
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Marca"/>
+                android:text="Marca" />
+
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tmpMarca"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+
                 <Spinner
                     android:id="@+id/spnMarca"
-                    android:layout_width="180dp"
+                    android:layout_width="151dp"
                     android:layout_height="wrap_content"></Spinner>
             </android.support.design.widget.TextInputLayout>
 
@@ -172,18 +188,7 @@
 
 
 
-    <ScrollView
-        android:padding="4dp"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
 
-
-        <LinearLayout
-            android:gravity="center"
-            android:padding="3dp"
-            android:layout_width="wrap_content"
-            android:orientation="vertical"
-            android:layout_height="wrap_content" >
 
             <LinearLayout
                 android:padding="5dp"
@@ -199,6 +204,7 @@
                     android:layout_width="wrap_content"
                     android:orientation="vertical"
                     android:layout_height="wrap_content">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -207,10 +213,15 @@
                         android:id="@+id/tmpCliente"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
+                        <View
+                            android:layout_width="43dp"
+                            android:layout_height="1dp"
+                            android:layout_weight="1" />
                         <Spinner
                             android:id="@+id/spnCliente"
                             android:layout_width="320dp"
                             android:layout_height="wrap_content"></Spinner>
+
                     </android.support.design.widget.TextInputLayout>
 
                 </LinearLayout>
@@ -220,72 +231,79 @@
 
 
             <LinearLayout
-                android:padding="5dp"
-                android:layout_width="wrap_content"
-                android:orientation="horizontal"
+                android:layout_width="321dp"
                 android:layout_height="wrap_content"
-                android:gravity="center">
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:padding="5dp">
 
                 <LinearLayout
+                    android:layout_width="99dp"
+                    android:layout_height="wrap_content"
                     android:background="@drawable/border"
                     android:gravity="center"
-                    android:layout_width="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_height="wrap_content">
+                    android:orientation="vertical">
+
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="VIN"/>
+                        android:text="VIN" />
+
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/tmpVin"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
+
                         <Spinner
                             android:id="@+id/spnVin"
-                            android:layout_width="125dp"
+                            android:layout_width="90dp"
                             android:layout_height="wrap_content"></Spinner>
                     </android.support.design.widget.TextInputLayout>
 
                 </LinearLayout>
+
                 <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_marginLeft="5dp"
                     android:background="@drawable/border"
                     android:gravity="center"
-                    android:layout_width="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_height="wrap_content">
+                    android:orientation="vertical">
 
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/tmpKm"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
+
                         <EditText
-                            android:inputType="numberDecimal"
                             android:id="@+id/edtKm"
+                            android:layout_width="77dp"
+                            android:layout_height="wrap_content"
                             android:hint="Km"
-                            android:layout_width="110dp"
-                            android:layout_height="wrap_content"></EditText>
+                            android:inputType="numberDecimal"></EditText>
                     </android.support.design.widget.TextInputLayout>
 
                 </LinearLayout>
+
                 <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+
                     android:layout_marginLeft="5dp"
                     android:background="@drawable/border"
-
-                    android:layout_width="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_height="wrap_content">
+                    android:orientation="vertical">
 
                     <android.support.design.widget.TextInputLayout
                         android:id="@+id/tmpHorometro"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
+
                         <EditText
-                            android:inputType="numberDecimal"
                             android:id="@+id/edtHorometro"
-                            android:hint="Horometro"
                             android:layout_width="110dp"
-                            android:layout_height="wrap_content"></EditText>
+                            android:layout_height="wrap_content"
+                            android:hint="Horometro"
+                            android:inputType="numberDecimal"></EditText>
                     </android.support.design.widget.TextInputLayout>
 
 
@@ -413,6 +431,7 @@
                             android:hint="Fecha Falla"
                             android:id="@+id/edtFechafalla"
                             android:layout_width="180dp"
+                            android:editable="false"
                             android:layout_height="wrap_content" />
                     </android.support.design.widget.TextInputLayout>
 
@@ -427,14 +446,14 @@
                         android:id="@+id/tmpReclamo"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content">
+
                         <EditText
                             android:id="@+id/edtReclamo"
-                            android:hint="Reclamo cliente.."
-                            android:gravity="left|top"
-                            android:inputType="textMultiLine"
                             android:layout_width="180dp"
-                            android:layout_height="100dp"
-                            />
+                            android:layout_height="81dp"
+                            android:gravity="left|top"
+                            android:hint="Reclamo cliente.."
+                            android:inputType="textMultiLine" />
                     </android.support.design.widget.TextInputLayout>
 
                 </LinearLayout>
@@ -443,12 +462,11 @@
 
             <Button
                 android:id="@+id/addAntecedente"
-                android:layout_marginTop="5dp"
-                android:layout_gravity="center"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Agregar Antecedente"
-                />
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:text="Agregar Antecedente" />
 
             <ListView
                 android:layout_gravity="center"
