--- a/app/src/main/res/layout/activity_detail_two.xml
+++ b/app/src/main/res/layout/activity_detail_two.xml
@@ -103,6 +103,10 @@
                 android:text="Uso Scanner"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+            <View
+                android:layout_width="43dp"
+                android:layout_height="1dp"
+                android:layout_weight="1" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tmpFileScanner"
@@ -132,6 +136,10 @@
                 android:text="Muestra Aceite"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+            <View
+                android:layout_width="43dp"
+                android:layout_height="1dp"
+                android:layout_weight="1" />
 
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tmpFileMuestAceite"
@@ -143,7 +151,7 @@
                     android:layout_marginLeft="5dp"
                     android:hint="Seleccione file.."
                     android:textSize="10sp"
-                    android:layout_width="200dp"
+                    android:layout_width="180dp"
                     android:layout_height="wrap_content" />
             </android.support.design.widget.TextInputLayout>
 
@@ -162,10 +170,15 @@
                 android:text="Muestra Combustible"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
+            <View
+                android:layout_width="43dp"
+                android:layout_height="1dp"
+                android:layout_weight="1" />
             <android.support.design.widget.TextInputLayout
                 android:id="@+id/tmpFileMuestCombus"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
+
 
                 <EditText
                     android:id="@+id/edtFileMuestCombus"
