--- a/app/src/main/res/layout/activity_detalle_causa_analisis_falla.xml
+++ b/app/src/main/res/layout/activity_detalle_causa_analisis_falla.xml
@@ -77,6 +77,11 @@
             android:id="@+id/tmpTecnicos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
+
+            <View
+                android:layout_width="wrap_content"
+                android:layout_weight="1"
+                android:layout_height="10dp"/>
             <EditText
                 android:inputType="none"
                 android:textSize="10sp"
@@ -84,11 +89,11 @@
                 android:hint="Seleccione tecnicos"
                 android:layout_width="300dp"
                 android:layout_height="wrap_content" />
-
             <View
                 android:layout_width="wrap_content"
                 android:layout_weight="1"
-                android:layout_height="40dp"/>
+                android:layout_height="10dp"/>
+
 
             <!--    <Spinner
                     android:id="@+id/spnTecnicos"
@@ -130,6 +135,7 @@
                     android:id="@+id/spnSistemaFalla"
                     android:layout_width="130dp"
                     android:layout_height="wrap_content"
+
                     ></Spinner>
             </android.support.design.widget.TextInputLayout>
 
