--- a/app/src/main/res/layout/layout_dialog_detallecausa_falla.xml
+++ b/app/src/main/res/layout/layout_dialog_detallecausa_falla.xml
@@ -111,11 +111,15 @@
             android:text="Uso Scanner"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+        <View
+            android:layout_width="0dp"
+            android:layout_weight="1"
+            android:layout_height="1dp"/>
 
         <EditText
             android:layout_marginLeft="5dp"
             android:hint="Seleccione file.."
-            android:layout_width="180dp"
+            android:layout_width="170dp"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
@@ -130,11 +134,14 @@
             android:text="Muestra aceite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
-
+        <View
+            android:layout_width="43dp"
+            android:layout_height="1dp"
+            android:layout_weight="1" />
         <EditText
             android:layout_marginLeft="5dp"
             android:hint="Seleccione file.."
-            android:layout_width="200dp"
+            android:layout_width="170dp"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
@@ -149,11 +156,15 @@
             android:text="Muestra Combustible"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_weight="1" />
 
         <EditText
             android:layout_marginLeft="5dp"
             android:hint="Seleccione file.."
-            android:layout_width="200dp"
+            android:layout_width="170dp"
             android:layout_height="wrap_content" />
 
     </LinearLayout>
