--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,7 @@
 <resources>
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#312e2e</color>
+    <color name="colorMotoredTop">#312e2e</color>
+    <color name="colorMotoredSpinner">#dc0909</color>
 </resources>
